objects/sixsense__X6sense_New_Company__c.object
<CustomObject>
    <description>Custom object to capture new company information (not current Accounts) as well as the score data for these new companies.</description>
    <fields>
        <fullName>sixsense__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>After conversion / import, this field is populated with the converted account</description>
        <inlineHelpText>After conversion / import, this field is populated with the converted account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>6sense New Companies</relationshipLabel>
        <relationshipName>X6sense_New_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Buying_Stage__c</fullName>
        <label>Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyId__c</fullName>
        <externalId>true</externalId>
        <label>Company</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__Company_Name_Long__c</fullName>
        <label>Company Name (Long)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Employees__c</fullName>
        <label>Employee Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Industry__c</fullName>
        <label>Industry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Intent_Score__c</fullName>
        <label>Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Invalid_Reason__c</fullName>
        <description>Reasons for a record being set to Invalid status.</description>
        <label>Invalid Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad data</fullName>
                </value>
                <value>
                    <fullName>Not an industry fit</fullName>
                </value>
                <value>
                    <fullName>Not a company size fit</fullName>
                </value>
                <value>
                    <fullName>Not a sales region fit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sixsense__Profile_Fit__c</fullName>
        <label>Profile Fit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Revenue_Range__c</fullName>
        <label>Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>Describes the status of the record - New, Imported, Duplicate, Invalid</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>6sense New Company</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <columns>sixsense__Intent_Score__c</columns>
        <columns>sixsense__Buying_Stage__c</columns>
        <columns>NAME</columns>
        <columns>sixsense__Website__c</columns>
        <columns>sixsense__Country__c</columns>
        <columns>sixsense__Industry__c</columns>
        <columns>sixsense__Employees__c</columns>
        <columns>sixsense__Revenue_Range__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sixsense__Status__c</field>
            <operation>notEqual</operation>
            <value>duplicate</value>
        </filters>
        <filters>
            <field>sixsense__Status__c</field>
            <operation>notEqual</operation>
            <value>invalid</value>
        </filters>
        <filters>
            <field>sixsense__Status__c</field>
            <operation>notEqual</operation>
            <value>imported</value>
        </filters>
        <filters>
            <field>sixsense__Intent_Score__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense New Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>